Spacing Correcting

--- a/src/css/@media.css
+++ b/src/css/@media.css
@@ -70,6 +70,10 @@
   footer a.nav-link.px-2 {
     font-size: 1.17rem;
   }
+
+  .timeLineCard {
+    width: 100% !important;
+  }
 }
 
 @media (max-width: 768px) {
@@ -116,7 +120,11 @@
 
   .card {
     width: 80%;
-    height: 450px;
+    height: 600px;
+  }
+
+  .card-body {
+    height: min-content;
   }
 
   dotlottie-player {
@@ -143,6 +151,10 @@
   }
   footer a.nav-link.px-2 {
     font-size: 1.17rem;
+  }
+
+  .timeLineCard {
+    width: 100% !important;
   }
 }
 
