--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -6,3 +6,5 @@ $navbar-dark-active-color: yellow;
 $table-bg: var(--#{--bs-bg-dark}body-bg);
 $table-color: var(--#{--bs-color-light}emphasis-color);
 $hr-color: white;
+$card-spacer-x: 0rem;
+$card-spacer-y: 0rem;
